--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jawahirul Wildan</title>
+    <img width="100" height="100" type="image/png" src="https://img.icons8.com/clouds/100/documents.png" alt="documents"/>
+    <title>CV Jawahirul Wildan</title>
     <style>
       * {
             font-family: Arial, Helvetica, sans-serif;
@@ -15,7 +16,7 @@
         body {
             min-width: fit-content;
             display: flex;
-            flex-direction: column;
+            flex-direction:  column;
             justify-content: center;
             align-items: center;
             padding: 1rem;
@@ -191,10 +192,9 @@
                         </p>
                         <p class="section-item__date">2018 - 2021</p>
                     </div>
-                        <p class="section-item__role">
-                            S1 Teknik Informatika
-                        </p>
-                    </div>
+                    <p class="section-item__role">
+                        MIPA
+                    </p>
                 </div>
             </div>
         </section>
