feat:skillset and toolset

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <img width="100" height="100" type="image/png" src="https://img.icons8.com/clouds/100/documents.png" alt="documents"/>
     <title>CV Jawahirul Wildan</title>
     <style>
       * {
@@ -324,6 +323,80 @@
                 </div>
             </div>
         </section>
+
+        <section class="section">
+            <div class="section-header">
+                <h1>Skill Set</h1>
+                <hr />
+            </div>
+            <div class="section-items">
+                <div class="section-item">
+                    <div class="section-item__header">
+                        <p class="section-item__title">
+                            Soft Skill
+                        </p>
+                    </div>
+                    <ul class="section-item__descs">
+                        <li class="section-item__desc">
+                            Kemampuan Berkomunikasi
+                        </li>
+                        <li class="section-item__desc">
+                            Problem solving
+                        </li>
+                        <li class="section-item__desc">
+                            Mampu bekerja baik secara tim maupun individu
+                        </li>
+                        <li class="section-item__desc">
+                            Memiliki tingkat keseriusan yang tinggi dalam mempelajari hal baru
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="section-item">
+                    <div class="section-item__header">
+                        <p class="section-item__title">
+                            Hard Skill
+                        </p>
+                    </div>
+                    <ul class="section-item__descs">
+                        <li class="section-item__desc">
+                            Kemampuan Coding: HTML & CSS, Java, Python, SQL, C dan C++ 
+                        <li class="section-item__desc">
+                            Skill Komputer: MS Office, Photoshop dan Adobe Premiere
+                        </li>
+                        <li class="section-item__desc">
+                            Fotografi
+                        </li>
+                        <li class="section-item__desc">
+                            Videografi
+                        </li>   
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="section-header">
+                <h1>Tools Set</h1>
+                <hr />
+            </div>
+            <div class="section-item">
+                <ul class="section-item__descs">
+                    <li class="section-item__desc">
+                        Microsoft Office
+                    </li>
+                    <li class="section-item__desc">
+                        Figma
+                    </li>
+                    <li class="section-item__desc">
+                        Photoshop
+                    </li>
+                    <li class="section-item__desc">
+                        Adobe Premiere
+                    </li>
+                </ul>
+            </div>
+        </section>    
     </main>
 </body>
 </html>
